design layout for list item

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet" />
+    <link href="./src/styles/app.scss" />
   </head>
   <body>
     <div id="main"></div>
